# LibreRef

./: .gitignore  build_appimage.sh  camera.ml  config.ml  dune  dune-project  error.ml  gui.ml  gui.mli  image.ml  libre-ref.opam  libre_ref.ml  notes.org  quadtree.ml  readme.md  scene.ml  serialized.ml  utils.ml  web.ml
resources/: libre-ref.desktop
