(lang dune 2.8)
(package
 (name libre-ref)
 (synopsis "Free as in freedom digital referencing tool for artists.")
  (description "LibreRef is a fully featured referencing tool for artists. Collect reference images into a single composition for ease of reference when drawing.")
 (depends
   (ocaml (>= 4.12.0))
   (cmdliner (>= 1.0.4))
   (data-encoding (>= 0.3))
   (lablgtk3 (>= 3.1.1))
   (stb_image (>= 0.5))))
(version 0.0.1)
(name libre-ref)
(generate_opam_files true)
(license AGPL-3.0+)
(source (uri git+https://gitlab.com/gopiandcode/libre-ref.git))
(bug_reports https://gitlab.com/gopiandcode/libre-ref/issues)
(homepage https://gitlab.com/gopiandcode/libre-ref)
(authors "Kiran Gopinathan")
(maintainers "kirang@comp.nus.edu.sg")
